# narrative-forge

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: .env.example  main.py
backend/app/api/v1/: chat.py  health.py
backend/app/core/: config.py  security.py
backend/app/services/: context_service.py  llm_service.py
backend/tests/: test_health.py
frontend/: .env.example  package.json  pnpm-lock.yaml  tsconfig.json  typescript_errors.txt
frontend/src/: App.tsx  index.css  index.html  index.tsx  main.tsx  router.tsx
frontend/src/components/chat/: ManuscriptAI.tsx  MessageBubble.tsx
frontend/src/components/editor/: EditorToolbar.tsx  SceneList.tsx  TipTapEditor.tsx
frontend/src/components/layout/: AppShell.tsx  ProtectedRoute.tsx  Sidebar.tsx  StatusBar.tsx  TopNav.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useProject.ts  useScene.ts
frontend/src/lib/: supabase.ts
frontend/src/lib/store/: projectStore.ts  sessionStore.ts  uiStore.ts
frontend/src/lib/utils/: extractText.ts  markdownToTiptap.ts
frontend/src/pages/Auth/: Login.tsx  Register.tsx
frontend/src/pages/Settings/: index.tsx
frontend/src/pages/WorldBuilder/: index.tsx
frontend/src/pages/Writing/: index.tsx
frontend/src/styles/: editor.css
frontend/src/styles/themes/: ethereal-dark.css
frontend/src/types/: database.ts
